# LLM_Bolierplate_Pack

./: .env.example  .env.mcp.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  INTENT.md  Makefile  OMNIGRAPH_SPEC.md  README.md  docker-compose.yml  idea_prompt.md  mcp.md  mise.toml  pyproject.toml  release-please-config.json  zmp-branch-policy.json
.agent/: mcp_config.json
.agent/workflows/: bootstrap.md  bug-fix.md  feature-dev.md  format.md  handoff.md  map.md  new-milestone.md  plan.md  update.md
.claude/: settings.json
.claude/agents/: arch-review.md  bootstrap.md  clean.md  codebase-mapper.md  commit.md  context-health-monitor.md  create-pr.md  debugger.md  executor.md  impact-analysis.md  plan-checker.md  planner.md  pr-review.md  verifier.md
.claude/commands/: commit-push-pr.sh  review-code.sh
.claude/hooks/: auto-format.sh  bash-guard.py  mcp-recall-memory.sh  mcp-store-memory.sh  md-recall-memory.sh  md-store-memory.sh  post-turn-index.sh  post-turn-verify.sh  pre-compact-save.sh  save-session-changes.sh  save-transcript.sh  session-start.sh  stop-context-save.sh  stop.js
.gemini/: GEMINI.md
.github/agents/: agent.md
.github/workflows/: ci.yml  claude-sync.yml  release-plugin.yml  verify-on-pr.yml
.gsd/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  GUIDE-system-prompt-patch.md  PATTERNS.md  RESEARCH-awesome-claude-code.md  RESEARCH-boilerplate-safe-apply.md  RESEARCH-everything-claude-code.md  RESEARCH-gsd-in-plugin.md  RESEARCH-plugin-auto-release.md  RESEARCH-plugin-feasibility.md  RESEARCH-plugin-vs-safe-apply.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md  TODO.md  project-config.yaml
.gsd/examples/: EXAMPLE_WORKFLOW.md
.gsd/reports/: REPORT-implementation-status-2026-01.md  REPORT-ralph-integration.md
.gsd/research/: 20260130-mcp-memory-alternatives.md  RESEARCH-bash-cli-tools-for-llm.md  RESEARCH-boilerplate-safe-apply.md  RESEARCH-google-antigravity-migration.md  RESEARCH-multi-language-support.md  RESEARCH-opencode-plugin-migration.md  RESEARCH-plugin-auto-release.md  RESEARCH-plugin-vs-safe-apply.md  RESEARCH-prior-art-multi-language.md  RESEARCH-python-specific-audit.md
.gsd/templates/: PLAN_TEMPLATE.md  VERIFICATION.md  VERIFICATION_TEMPLATE.md  project-config.yaml
.legacy/: branch-policy.json  logging.conf  mise.toml  spec.md
.legacy/docs/: ai-onboarding.md
.legacy/scripts/: skill-orchestrator.js  verify-feedback-loop.js
.logs/: events.db
.qlty/: qlty.toml
docs/: AGENTS.md  BUILD.md  GITHUB-WORKFLOW.md  HOOKS.md  LINTING.md  MCP.md  MEMORY.md  SKILLS.md  WORKFLOWS.md  ai-onboarding.md  mcp-guide.md  onboarding.md
gsd-plugin/: .mcp.json  CHANGELOG.md  README.md  RELEASE.md
gsd-plugin/.claude-plugin/: plugin.json
gsd-plugin/agents/: arch-review.md  clean.md  codebase-mapper.md  commit.md  context-health-monitor.md  create-pr.md  debugger.md  executor.md  impact-analysis.md  plan-checker.md  planner.md  pr-review.md  verifier.md
gsd-plugin/commands/: add-phase.md  add-todo.md  complete-milestone.md  debug.md  execute.md  feature-dev.md  help.md  init.md  new-project.md  quick-check.md  research-phase.md
gsd-plugin/hooks/: hooks.json
gsd-plugin/references/: CLAUDE.md  Makefile  ci.yml  github-agent.md  vscode-extensions.json
gsd-plugin/scripts/: auto-format-py.sh  compact-context.sh  file-protect.py  post-turn-index.sh  post-turn-verify.sh  pre-compact-save.sh  save-session-changes.sh  scaffold-gsd.sh  scaffold-infra.sh  session-start.sh  track-modifications.sh
gui/backend/: Dockerfile  requirements.txt
gui/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
kits/option_a/: .mcp.json.example  INSTRUCTIONS.md
kits/option_c/: mock_agent.py  mock_agent.sh
langchain_tools/: README.md  __init__.py  cli.py  config.py
mcp/: codanna.Dockerfile  config.json  context7.Dockerfile  docker-compose.mcp.yml  mcp-docker-runner.js  mcp-runner.js  serena.Dockerfile  server.py  shrimp.Dockerfile  sync.py
platform-core/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
platform-core/api/: app.py  mcp_server.py
platform-core/dashboard/neodash/: config.json
platform-core/dashboard/web-admin/: index.html  package-lock.json  package.json
platform-core/dashboard/web-admin/src/: App.tsx  index.css
platform-core/graph-db/: constraints.cypher  schema.cypher
platform-core/ingestion/: urn_normalizer.py
platform-core/orchestration/: __init__.py  graph.py  graph_v2.py  mcp_client.py  state.py  test_flow.py
platform-core/orchestration/nodes/: __init__.py  global_retriever.py  intent_classifier.py  local_retriever.py  pruner.py  synthesizer.py
platform-core/orchestration/tools/: mcp_client.py
platform-core/scripts/: test_neo4j.sh
platform-core/tests/: __init__.py  test_e2e.py
project-template/: .env.example  .gitignore  codegraph.toml
scripts/: bootstrap.sh  build-antigravity.sh  build-opencode.sh  build-plugin.sh  convert-hooks-to-plugins.py  detect-language.sh  generate-claude-md.sh  load-config.sh  migrate-memories.py  validate_spec.py  verify-feedback-loop.js
shared-libs/: urn_manager.py
tests/: conftest.py  test_analyzer.py  test_reporter.py  test_sample.py
(+239 files in other folders)
