[project]
name = "boilerplate"
version = "0.1.0"
description = "AI agent development boilerplate with code-graph-rag, memory-graph, and GSD methodology"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "awesome-claude-code",
    "claude-code-tips",
    "everything-claude-code",
    "ralph",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear (ABC 검증, 일반적 버그 패턴)
    "C90",  # McCabe complexity
    "PL",   # Pylint (인자 수, 복잡도 제한)
    "TC",   # flake8-type-checking (Protocol/ABC import 정리)
]
ignore = [
    "E501",    # line-length (ruff formatter가 처리)
    "PLR2004", # magic-value-comparison (상수 비교 허용)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-returns = 6
max-statements = 50

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["*Factory", "Create*"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    "awesome-claude-code",
    "claude-code-tips",
    "everything-claude-code",
    "ralph",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
