[project]
name = "omnigraph-platform"
version = "1.0.0"
description = "OmniGraph Hybrid RAG Framework - Platform Core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
    "langchain-mcp-adapters>=0.0.1",
    "mcp>=0.1.0",
    "pydantic>=2.5.0",
    "neo4j>=5.15.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
